--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon app.ts",
+    "start": "nodemon ./tests/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
