--- a/package.json
+++ b/package.json
@@ -4,17 +4,19 @@
   "description": "A library that contains caching decorators for use on class methods",
   "main": "index.js",
   "scripts": {
-    "test": "nodemon ./tests/app.ts"
+    "test": "cypress run",
+    "cy:open": "cypress open"
   },
   "author": "Theunis Cilliers",
   "license": "AGPL-3.0-only",
   "dependencies": {
-    "axios": "^1.2.0",
     "pluralize": "^8.0.0",
     "rxjs": "^7.5.7"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20",
-    "ts-node": "^10.9.1"
+    "@faker-js/faker": "^7.6.0",
+    "cypress": "^12.0.2",
+    "cypress-watch-and-reload": "^1.10.5",
+    "typescript": "^4.9.4"
   }
 }
